Replaced Base64 encoder/decoder to a public domain version, small bugfix